# pdf-comprs

./: .gitignore  README.md  config.example.yml  index.css  run.py  start.sh  stop.sh
backend/: README.md  pyproject.toml
backend/src/: __init__.py  config.py  logger.py  main.py
backend/src/api/: __init__.py  compression.py  config.py  health.py  routes.py
backend/src/models/: __init__.py  requests.py  responses.py
backend/src/services/: __init__.py  file_manager.py  image_converter.py  pdf_compressor.py
backend/src/utils/: __init__.py  ngrok_tunnel.py
backend/tests/: __init__.py
docs/: API.md  FOLDER_STRUCTURE.md  PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/compression/: CompressPdfPanel.tsx  ImageToPdfPanel.tsx  PdfPreview.tsx  ResultDisplay.tsx  SettingsForm.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/components/three/: Background3D.tsx
frontend/src/components/ui/: button.tsx  tabs.tsx
frontend/src/components/upload/: FileList.tsx  ImageItem.tsx  UploadZone.tsx
frontend/src/services/: api.ts  compressionApi.ts
frontend/src/stores/: appConfigStore.ts  compressionStore.ts  fileStore.ts  themeStore.ts
frontend/src/types/: index.ts
notebook/: compress_pdf.ipynb
